// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SampleComponent tests should be rendered correctly while fetching 1`] = `
<div
  className="SampleComponent">
  <div>
    Data are loading...
  </div>
</div>
`;

exports[`SampleComponent tests should be rendered correctly with empty data) 1`] = `
<div
  className="SampleComponent">
  <div>
    No data were found
  </div>
</div>
`;

exports[`SampleComponent tests should be rendered correctly with if error occurs 1`] = `
<div
  className="SampleComponent">
  <span>
    Some Error
  </span>
  <div>
    No data were found
  </div>
</div>
`;

exports[`SampleComponent tests should be rendered correctly with some dataset from server 1`] = `
<div
  className="SampleComponent">
  <div>
    <h3>
      List
      
      :
    </h3>
    <ul>
      <li>
        First list item from server
      </li>
      <li>
        Second list item from server
      </li>
    </ul>
  </div>
</div>
`;

exports[`SampleComponent tests should be rendered correctly with some filtered dataset from server 1`] = `
<div
  className="SampleComponent">
  <div>
    <h3>
      List
       (filtered)
      :
    </h3>
    <ul>
      <li>
        First list item from server
      </li>
      <li>
        Second list item from server
      </li>
    </ul>
  </div>
</div>
`;
